vendor/cache/ruby/3.0.0/extensions/x86_64-linux/3.0.0/sqlite3-1.3.8/gem_make.out
current directory: /home/ubuntu/Bugsinc/bugsinc/vendor/cache/ruby/3.0.0/gems/sqlite3-1.3.8/ext/sqlite3
/home/ubuntu/.rvm/rubies/ruby-3.0.0/bin/ruby -I /home/ubuntu/.rvm/rubies/ruby-3.0.0/lib/ruby/3.0.0 -r ./siteconf20221115-45287-28ei0i.rb extconf.rb
checking for sqlite3.h... yes
checking for sqlite3_libversion_number() in -lsqlite3... yes
checking for rb_proc_arity()... yes
checking for sqlite3_initialize()... yes
checking for sqlite3_backup_init()... yes
checking for sqlite3_column_database_name()... yes
checking for sqlite3_enable_load_extension()... yes
checking for sqlite3_load_extension()... yes
checking for sqlite3_open_v2()... yes
checking for sqlite3_prepare_v2()... yes
checking for sqlite3_int64 in sqlite3.h... yes
checking for sqlite3_uint64 in sqlite3.h... yes
creating Makefile

current directory: /home/ubuntu/Bugsinc/bugsinc/vendor/cache/ruby/3.0.0/gems/sqlite3-1.3.8/ext/sqlite3
make "DESTDIR=" clean

current directory: /home/ubuntu/Bugsinc/bugsinc/vendor/cache/ruby/3.0.0/gems/sqlite3-1.3.8/ext/sqlite3
make "DESTDIR="
compiling backup.c
compiling database.c
database.c: In function ‘initialize’:
database.c:57:3: warning: implicit declaration of function ‘rb_check_safe_obj’; did you mean ‘rb_check_safe_str’? [-Wimplicit-function-declaration]
   57 |   rb_check_safe_obj(file);
      |   ^~~~~~~~~~~~~~~~~
      |   rb_check_safe_str
database.c: At top level:
cc1: warning: unrecognized command line option ‘-Wno-self-assign’
cc1: warning: unrecognized command line option ‘-Wno-parentheses-equality’
cc1: warning: unrecognized command line option ‘-Wno-constant-logical-operand’
compiling exception.c
compiling sqlite3.c
compiling statement.c
In file included from statement.c:1:
statement.c: In function ‘bind_param’:
./sqlite3_ruby.h:16:24: warning: implicit declaration of function ‘RBIGNUM’; did you mean ‘T_BIGNUM’? [-Wimplicit-function-declaration]
   16 | #define RBIGNUM_LEN(x) RBIGNUM(x)->len
      |                        ^~~~~~~
statement.c:261:11: note: in expansion of macro ‘RBIGNUM_LEN’
  261 |       if (RBIGNUM_LEN(value) * SIZEOF_BDIGITS <= 8) {
      |           ^~~~~~~~~~~
./sqlite3_ruby.h:16:34: error: invalid type argument of ‘->’ (have ‘int’)
   16 | #define RBIGNUM_LEN(x) RBIGNUM(x)->len
      |                                  ^~
statement.c:261:11: note: in expansion of macro ‘RBIGNUM_LEN’
  261 |       if (RBIGNUM_LEN(value) * SIZEOF_BDIGITS <= 8) {
      |           ^~~~~~~~~~~
statement.c:261:32: error: ‘SIZEOF_BDIGITS’ undeclared (first use in this function); did you mean ‘SIZEOF_INT’?
  261 |       if (RBIGNUM_LEN(value) * SIZEOF_BDIGITS <= 8) {
      |                                ^~~~~~~~~~~~~~
      |                                SIZEOF_INT
statement.c:261:32: note: each undeclared identifier is reported only once for each function it appears in
statement.c: In function ‘reset_bang’:
statement.c:293:7: warning: variable ‘status’ set but not used [-Wunused-but-set-variable]
  293 |   int status;
      |       ^~~~~~
statement.c: In function ‘clear_bindings’:
statement.c:313:7: warning: variable ‘status’ set but not used [-Wunused-but-set-variable]
  313 |   int status;
      |       ^~~~~~
statement.c: At top level:
cc1: warning: unrecognized command line option ‘-Wno-self-assign’
cc1: warning: unrecognized command line option ‘-Wno-parentheses-equality’
cc1: warning: unrecognized command line option ‘-Wno-constant-logical-operand’
make: *** [Makefile:245: statement.o] Error 1

make failed, exit code 2
